[tool.poetry]
name = "streaming order book"
version = "0.1.0"
description = ""
authors = ["Kyle <kyle.tz.cui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
